5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1834_1273.log
== TEST (2019-06-27 11:13:26) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:14:03) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(a),vetor)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:14:27) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(vetor,a)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:15:22) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(round(b, 1)



-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:15:40) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(round(b, 1)

-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:15:49) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(round(b, 1)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:19:49) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print("x1: ", round(b[0], 1))
print("x2: ", round(b[1], 1))
print("x3: ", round(b[2], 1))
print("x4: ",round(b[3], 1))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:20:53) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(round(b,1))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:20:58) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(round(b,1))



-- EXECUTION TIME:
1.15707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1273/main.py", line 9, in <module>
    print(round(b,1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:21:14) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:21:30) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(b)



-- EXECUTION TIME:
1.19787
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:48:24) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:48:31) 
-- CODE:
from numpy import*
from numpy.linalg import *


vetor = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
a= array([50, -120, 350,870])
a = a.T
b=dot(inv(vetor),a)
print(b)



-- EXECUTION TIME:
1.30997
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
